--- a/newbie/10.html
+++ b/newbie/10.html
@@ -57,52 +57,62 @@
 <hr>
 <br>
 <p>Пункт №1. Перейдите на сайт <a href="https://www.libreoffice.org/download/download-libreoffice/" target="_blank">https://www.libreoffice.org/download/download-libreoffice/</a>, нажмите по жёлтой кнопке DOWNLOAD. Дождитесь окончания загрузки файла.</p>
+<a href="/images/view.html#/images/newbie-27.png">
 <div class="computer-show">
 <img src="../images/newbie-27.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-27.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №2. Запустите скачанный файл.</p>
+<a href="/images/view.html#/images/newbie-28.png">
 <div class="computer-show">
 <img src="../images/newbie-28.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-28.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №3. Нажмите "Далее" два раза.</p>
+<a href="/images/view.html#/images/newbie-29.png">
 <div class="computer-show">
 <img src="../images/newbie-29.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-29.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №4. Нажмите "Установить". В окне "Контроль учётных записей" нажмите "Да". Дождитесь окончания установки.</p>
+<a href="/images/view.html#/images/newbie-30.png">
 <div class="computer-show">
 <img src="../images/newbie-30.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-30.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №5. Готово! LibreOffice установлен! Нажмите "Готово", чтобы выйти из установщика. Вы можете запустить LibreOffice из меню "Пуск" или с рабочего стола!</p>
+<a href="/images/view.html#/images/newbie-31.png">
 <div class="computer-show">
 <img src="../images/newbie-31.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-31.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
