--- a/newbie/11.html
+++ b/newbie/11.html
@@ -60,52 +60,62 @@
 <hr>
 <br>
 <p>Пункт №1. Перейдите на сайт <a href="https://www.opera.com/ru" target="_blank">https://www.opera.com/ru</a>, нажмите по кнопке "Загрузить сейчас". Дождитесь окончания загрузки файла.</p>
+<a href="/images/view.html#/images/newbie-32.png">
 <div class="computer-show">
 <img src="../images/newbie-32.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-32.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №2. Запустите скачанный файл.</p>
+<a href="/images/view.html#/images/newbie-33.png">
 <div class="computer-show">
 <img src="../images/newbie-33.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-33.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №3. Нажмите "Принять и установить".</p>
+<a href="/images/view.html#/images/newbie-34.png">
 <div class="computer-show">
 <img src="../images/newbie-34.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-34.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №4. Нажмите "Принять". Дождитесь окончания установки.</p>
+<a href="/images/view.html#/images/newbie-35.png">
 <div class="computer-show">
 <img src="../images/newbie-35.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-35.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №5. Готово! По завершении установки браузер добавит себя на рабочий стол, предложит закрепить себя на панель задач и запустится. Осталось пройти первоначальную настройку, с ней справится каждый!</p>
+<a href="/images/view.html#/images/newbie-36.png">
 <div class="computer-show">
 <img src="../images/newbie-36.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-36.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
