--- a/newbie/12.html
+++ b/newbie/12.html
@@ -59,32 +59,38 @@
 <hr>
 <br>
 <p>Пункт №1. Откройте проводник. Для этого откройте "Пуск" и найдите "Проводник", затем запустите его.</p>
+<a href="/images/view.html#/images/newbie-37.png">
 <div class="computer-show">
 <img src="../images/newbie-37.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-37.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №2. Найдите "Поиск". Он находится в правом верхнем углу проводника.</p>
+<a href="/images/view.html#/images/newbie-38.png">
 <div class="computer-show">
 <img src="../images/newbie-38.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-38.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №3. Введите название вашего файла. Он будет найден, однако процесс поиска может занять некоторое время!</p>
+<a href="/images/view.html#/images/newbie-39.png">
 <div class="computer-show">
 <img src="../images/newbie-39.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-39.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
