--- a/newbie/13.html
+++ b/newbie/13.html
@@ -59,72 +59,86 @@
 <hr>
 <br>
 <p>Пункт №1. Перейдите на сайт <a href="https://notepad-plus-plus.org/downloads/" target="_blank">https://notepad-plus-plus.org/downloads/</a>. Выбирите последнюю версию Notepad++.</a></p>
+<a href="/images/view.html#/images/newbie-40.png">
 <div class="computer-show">
 <img src="../images/newbie-40.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-40.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №2. Дождитесь окончания загрузки страницы. Нажмите на зелёную кнопку "Download". Если ничего не появилось, то перейдите на <a href="https://github.com/notepad-plus-plus/notepad-plus-plus/releases" target="_blank">https://github.com/notepad-plus-plus/notepad-plus-plus/releases</a>, пролистайте вниз, найдите файл npp.версия.Installer.exe и нажмите по нему.</p>
+<a href="/images/view.html#/images/newbie-41.png">
 <div class="computer-show">
 <img src="../images/newbie-41.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-41.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №3. Запустите скачанный файл. В окне "Контроль учётных записей" нажмите Да.</p>
+<a href="/images/view.html#/images/newbie-42.png">
 <div class="computer-show">
 <img src="../images/newbie-42.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-42.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №4. Выбирите язык установки.</p>
+<a href="/images/view.html#/images/newbie-43.png">
 <div class="computer-show">
 <img src="../images/newbie-43.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-43.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №5. Нажмите "Далее", затем "Принимаю", затем "Далее" два раза.</p>
+<a href="/images/view.html#/images/newbie-44.png">
 <div class="computer-show">
 <img src="../images/newbie-44.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-44.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №6. Нажмите "Установить".</p>
+<a href="/images/view.html#/images/newbie-45.png">
 <div class="computer-show">
 <img src="../images/newbie-45.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-45.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №7. Готово! Notepad++ установлен! Нажмите "Готово", чтобы завершить установку и запустить Notepad++. В дальнейшем вы можете запустить Notepad++ через меню "Пуск".</p>
+<a href="/images/view.html#/images/newbie-46.png">
 <div class="computer-show">
 <img src="../images/newbie-46.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-46.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
