--- a/newbie/14.html
+++ b/newbie/14.html
@@ -59,62 +59,74 @@
 <hr>
 <br>
 <p>Пункт №1. Откройте "Проводник".</a></p>
+<a href="/images/view.html#/images/newbie-47.png">
 <div class="computer-show">
 <img src="../images/newbie-47.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-47.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №2. Перейдите по пути "C:\Windows", найдите файл "notepad", нажмите по нему правой кнопкой мыши и выберите "Запуск от имени администратора". В окне "Контроль учётных записей" нажмите Да.</p>
+<a href="/images/view.html#/images/newbie-48.png">
 <div class="computer-show">
 <img src="../images/newbie-48.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-48.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №3. В блокноте нажмите "Файл" и выберите "Открыть...".</p>
+<a href="/images/view.html#/images/newbie-49.png">
 <div class="computer-show">
 <img src="../images/newbie-49.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-49.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №4. Переключите "Текстовые документы (*.txt)" на "Все файлы", затем перейдите по пути "C:\Windows\System32\drivers\etc" и дважды нажмите по файлу "hosts".</p>
+<a href="/images/view.html#/images/newbie-50.png">
 <div class="computer-show">
 <img src="../images/newbie-50.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-50.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №5. Добавьте запись: 127.0.0.1  <доменное имя сайта>. Где <доменное имя сайта>, введите адрес сайта. ВНИМАНИЕ! Адрес сайта вводить без слэшей, http://, https://, и т.д. Пример рабочей записи: 127.0.0.1  uzasniyyyysait228.org .</p>
+<a href="/images/view.html#/images/newbie-51.png">
 <div class="computer-show">
 <img src="../images/newbie-51.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-51.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №6. Сохраните файл. Готово! Сайт был заблокирован на данном компьютере. Если сайт всё равно открывается, то перезапустите браузер.</p>
+<a href="/images/view.html#/images/newbie-52.png">
 <div class="computer-show">
 <img src="../images/newbie-52.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-52.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
