--- a/newbie/6.html
+++ b/newbie/6.html
@@ -60,62 +60,75 @@
 <hr>
 <br>
 <p>Пункт №1. Перейдите на сайт <a href="https://7-zip.org/" target="_blank">https://7-zip.org/</a></p>
+<a href="/images/view.html#/images/newbie-1.png">
 <div class="computer-show">
 <img src="../images/newbie-1.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-1.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №2. Нажмите на кнопку Download. Их там несколько. На какую жать зависит от вашей битности системы. На фото ниже показаны стрелки и зависимости, чтобы программа работала. Если вы не знаете битность вашей ОС, скачайте 32-битную версию 7-Zip. Она должна запуститься и на 64-битных и на 32-битных ОС, на процессоре с поддержкой ARM включительно.</p>
+<a href="/images/view.html#/images/newbie-2.png">
 <div class="computer-show">
 <img src="../images/newbie-2.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-2.png" width="260" height="150">
+</a>
 </div>
 <br>
 <hr>
 <br>
 <p>Пункт №3. Нажмите дождитесь загрузки файла и запустите его. </p>
+<a href="/images/view.html#/images/newbie-3.png">
 <div class="computer-show">
 <img src="../images/newbie-3.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-3.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №4. В появившимся окне нажмите Install. Путь установки при желании можете изменить.</p>
+<a href="/images/view.html#/images/newbie-4.png">
 <div class="computer-show">
 <img src="../images/newbie-4.png" width="520" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-4.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №5 - Готово! Архиватор 7-Zip был установлен!</p>
+
+<a href="/images/view.html#/images/newbie-5.png">
 <div class="computer-show">
 <img src="../images/newbie-5.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-5.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Финиш - Вы можете найти архиватор 7-Zip в "Пуске" и начать его использование! Удачи!</p>
+<a href="/images/view.html#/images/newbie-6.png">
 <div class="computer-show">
 <img src="../images/newbie-6.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-6.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <p>Следите за нашим сайтом, чтобы не пропускать новые инструкции для вас!</p>
