--- a/newbie/7.html
+++ b/newbie/7.html
@@ -60,72 +60,87 @@
 <hr>
 <br>
 <p>Пункт №1. Перейдите на сайт <a href="https://www.videolan.org/vlc/" target="_blank">https://www.videolan.org/vlc/</a></p>
+<a href="/images/view.html#/images/newbie-7.png">
 <div class="computer-show">
 <img src="../images/newbie-7.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-7.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №2. Нажмите на кнопку "Загрузить VLC". Дождитесь начала и окончания загрузки.</p>
+<a href="/images/view.html#/images/newbie-8.png">
 <div class="computer-show">
 <img src="../images/newbie-8.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-8.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №3. Запустите файл. В окне "Контроль учётных записей" нажмите Да. Если просит пароль Администратора, введите его.</p>
+
+<a href="/images/view.html#/images/newbie-9.png">
 <div class="computer-show">
 <img src="../images/newbie-9.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-9.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №4. Выберите язык установки и нажмите ОК.</p>
+<a href="/images/view.html#/images/newbie-10.png">
 <div class="computer-show">
 <img src="../images/newbie-10.png" width="520" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-10.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №5 - Нажмите "Далее" три раза.</p>
+<a href="/images/view.html#/images/newbie-11.png">
 <div class="computer-show">
 <img src="../images/newbie-11.png" width="490" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-11.png" width="200" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №6 - Нажмите "Установить", затем дождитесь окончания установки.</p>
+<a href="/images/view.html#/images/newbie-12.png">
 <div class="computer-show">
 <img src="../images/newbie-12.png" width="490" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-12.png" width="200" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Финиш - VLC Media Player установлен! Теперь вы можете нажать ОК и начать использование. Так-же вы можете запустить VLC Media Player из меню Пуск.</p>
+<a href="/images/view.html#/images/newbie-13.png">
 <div class="computer-show">
 <img src="../images/newbie-13.png" width="490" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-13.png" width="200" height="150">
 </div>
+</a>
 <br>
 <hr>
 <p>Следите за нашим сайтом, чтобы не пропускать новые инструкции для вас!</p>
