--- a/newbie/8.html
+++ b/newbie/8.html
@@ -58,32 +58,38 @@
 <hr>
 <br>
 <p>Пункт №1. Нажмите Windows + R на клавиатуре.</p>
+<a href="/images/view.html#/images/newbie-14.png">
 <div class="computer-show">
 <img src="../images/newbie-14.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-14.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №2. Введите "shutdown /s /t {время до отключения}" (без кавычек). Где {время до отключения} укажите время, через которое нужно отключить компьютер в секундах (Например: shutdown /s /t 1800 - отключает компьютер через 30 минут, shutdown /s /t 3600 - отключит компьютер через час, shutdown /s /t 7200 - отключит через 2 часа и т.д.). Вы можете использовать конвертер времени, чтобы перевести нужную единицу времени в секунды, либо посчитать всё самостоятельно. Затем нажмите ОК.</p>
+<a href="/images/view.html#/images/newbie-15.png">
 <div class="computer-show">
 <img src="../images/newbie-15.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-15.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №3. Готово! Компьютер отключится через заданное время.</p>
+<a href="/images/view.html#/images/newbie-16.png">
 <div class="computer-show">
 <img src="../images/newbie-16.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-16.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br><br>
@@ -93,32 +99,39 @@
 <hr>
 <br>
 <p>Пункт №1. Нажмите Windows + R на клавиатуре.</p>
+
+<a href="/images/view.html#/images/newbie-14.png">
 <div class="computer-show">
 <img src="../images/newbie-14.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-14.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №2. Введите "shutdown /a" (без кавычек) и нажмите ОК.</p>
+<a href="/images/view.html#/images/newbie-17.png">
 <div class="computer-show">
 <img src="../images/newbie-17.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-17.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №3. Готово! Отключение компьютера отменено.</p>
+<a href="/images/view.html#/images/newbie-18.png">
 <div class="computer-show">
 <img src="../images/newbie-18.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-18.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br><br>
@@ -128,42 +141,50 @@
 <hr>
 <br>
 <p>Пункт №1. Создайте новый ярлык. Как это сделать, мы уже описали в статье <a href="/newbie/2.html">"Создание ярлыков на рабочем столе"</a>.</p>
+<a href="/images/view.html#/images/newbie-19.png">
 <div class="computer-show">
 <img src="../images/newbie-19.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-19.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №2. Вводим "shutdown /s /t {время до отключения в секундах}" (без кавычек) и нажимаем Далее.</p>
+<a href="/images/view.html#/images/newbie-20.png">
 <div class="computer-show">
 <img src="../images/newbie-20.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-20.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №3. Даём любое название ярлыку, например "Выключить ПК через X" (где X - время до отключения ПК). Нажимаем Готово.</p>
+<a href="/images/view.html#/images/newbie-21.png">
 <div class="computer-show">
 <img src="../images/newbie-21.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-21.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №4. Готово! Ярлык создан. Теперь при двойном нажатии по ярлыку, таймер до отключения ПК будет запускаться. Таким-же образом можно создать ярлык на отмену таймера.</p>
+<a href="/images/view.html#/images/newbie-22.png">
 <div class="computer-show">
 <img src="../images/newbie-22.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-22.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
