--- a/newbie/9.html
+++ b/newbie/9.html
@@ -58,42 +58,50 @@
 <hr>
 <br>
 <p>Пункт №1. Перейдите на сайт <a href="https://vk.me/app" target="_blank">https://vk.me/app</a>, пролистайте вниз и найдите пункт "Скачать для Windows". Нажмите "Скачать EXE".</p>
+<a href="/images/view.html#/images/newbie-23.png">
 <div class="computer-show">
 <img src="../images/newbie-23.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-23.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №2. Запустите скачанный файл. В окне "Контроль учётных записей" нажмите "Да".</p>
+<a href="/images/view.html#/images/newbie-24.png">
 <div class="computer-show">
 <img src="../images/newbie-24.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-24.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №3. Нажмите "Установить".</p>
+<a href="/images/view.html#/images/newbie-25.png">
 <div class="computer-show">
 <img src="../images/newbie-25.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-25.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
 <p>Пункт №4. VK Messenger установлен! Теперь вы можете запустить его, нажав "Готово". В дальнейшем вы можете запустить его через меню "Пуск" или рабочий стол!</p>
+<a href="/images/view.html#/images/newbie-26.png">
 <div class="computer-show">
 <img src="../images/newbie-26.png" width="630" height="320">
 </div>
 <div class="smartphone-show">
 <img src="../images/newbie-26.png" width="260" height="150">
 </div>
+</a>
 <br>
 <hr>
 <br>
