--- a/index.html
+++ b/index.html
@@ -80,6 +80,17 @@
 <hr>
 <br>
 <h4>KostySystem - статьи</h4>
+<p>24.10.2024, 21:42</p>
+<h2><a href="/articles/14.html">Можно ли выжить на Windows 7 в 2024 году?</a></h2>
+<br>
+<hr>
+<br>
+<br>
+<br>
+<br>
+<hr>
+<br>
+<h4>KostySystem - статьи</h4>
 <p>17.10.2024, 23:48</p>
 <h2><a href="/articles/13.html">Можно ли выжить на Windows XP в 2024 году?</a></h2>
 <br>
@@ -93,17 +104,6 @@
 <h4>KostySystem - статьи</h4>
 <p>16.10.2024, 21:40</p>
 <h2><a href="/articles/12.html">KolibriOS - Самая маленькая ОС</a></h2>
-<br>
-<hr>
-<br>
-<br>
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem - статьи</h4>
-<p>09.10.2024, 21:47</p>
-<h2><a href="/articles/11.html">Как установить Telegram в Windows</a></h2>
 <br>
 <hr>
 <br>
