--- a/searchframe.html
+++ b/searchframe.html
@@ -135,6 +135,19 @@ parent.sexit();
 <hr>
 <br>
 <h4>KostySystem - статьи</h4>
+<p>24.10.2024, 21:42</p>
+<div class="card2"><h2><a href="/articles/14.html" target="_parent">Можно ли выжить на Windows 7 в 2024 году?</a></h2></div>
+<br>
+<hr>
+<br>
+<br>
+        </div>
+        <div class="card">
+<br>
+<br>
+<hr>
+<br>
+<h4>KostySystem - статьи</h4>
 <p>17.10.2024, 21:48</p>
 <div class="card2"><h2><a href="/articles/13.html" target="_parent">Можно ли выжить на Windows XP в 2024 году?</a></h2></div>
 <br>
