--- a/forapp.html
+++ b/forapp.html
@@ -61,6 +61,7 @@
 </div>
 <script src="/elements.js"></script>
 <script>
+window.location.hash = "#";
 window.location.pathname = "/";
 </script>
 </body>
