--- a/forapp.html
+++ b/forapp.html
@@ -61,8 +61,7 @@
 </div>
 <script src="/elements.js"></script>
 <script>
-window.location.hash = "#";
-window.location.pathname = "/";
+window.location.href = "https://kostysystem.github.io";
 </script>
 </body>
 </html>
