--- a/forapp.html
+++ b/forapp.html
@@ -3,65 +3,29 @@
 <head>
 <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>/forapp.html - KostySystem</title>
+<title>Loading - KostySystem</title>
   <link rel="icon" href="favicon.ico">
 <div id="styles">
 <link rel="stylesheet" type="text/css" href="/styles.css" />
 </div>
 </head>
 <body>
-<div id="menu">
-<div class="zakrep">
-<nav>  
-   <ul class="topmenu">
-    <li> <h2> KostySystem</h2></li>
-    <li> </li>
-    <li> </li>
-    <li> </li>
-    <li> </li>
-    <li> </li>
-    <li><a href="../index.html">Главная</a></li>
-    <li><a href="../newbie/index.html">Для новичков</a></li>
-    <li><a href="../articles/index.html">KostySystem - статьи</a></li>
-    <li><a href="../blog/index.html">Блог</a></li>
-  </ul>
-        <div class="menu">
-<br>
-    <input type="checkbox" id="burger-checkbox" class="burger-checkbox">
-    <label for="burger-checkbox" class="burger"></label>
-    <ul class="menu-list">
-<br><br>
-<center>
-            <li><h3>KostySystem</h3></li>
-</center>
-            <li><a class="menu-item" href="../index.html">Главная</a></li>
-            <li><a class="menu-item" href="../newbie/index.html">Для новичков</a></li>
-            <li><a class="menu-item" href="../articles/index.html">KostySystem - статьи</a></li>
-            <li><a class="menu-item" href="../blog/index.html">Блог</a></li>
-       </ul>
-<br>
-</div>
-</div>
-</nav>
-</div>
 <center>
 <br>
 <h1>KostySystem</h1>
 <h3>Загрузка...</h3>
-<hr>
-<br>
-<p>Пожалуйста, подождите....</p>
 <br>
 <br><br><br><br>
 </center>
 <div class="copyright" id="copyright">
 <center> <br><br> <h2>KostySystem</h2> <h5>© KostySystem</h5> <br> 
-<p>! JavaScript отключён. Некоторые элементы сайта могут отображаться неправильно.</p>
 </center>
 </div>
-<script src="/elements.js"></script>
 <script>
+var hash = window.location.hash;
+if (hash == "#1.0"){
 window.location.href = "https://kostysystem.github.io";
+} 
 </script>
 </body>
 </html>
