--- a/forapp.html
+++ b/forapp.html
@@ -1,31 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
+<body>
 <head>
 <meta charset="utf-8" />
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Loading - KostySystem</title>
-  <link rel="icon" href="favicon.ico">
-<div id="styles">
-<link rel="stylesheet" type="text/css" href="/styles.css" />
-</div>
 </head>
-<body>
-<center>
-<br>
-<h1>KostySystem</h1>
-<h3>Загрузка...</h3>
-<br>
-<br><br><br><br>
-</center>
-<div class="copyright" id="copyright">
-<center> <br><br> <h2>KostySystem</h2> <h5>© KostySystem</h5> <br> 
-</center>
+<div id="page">
+<iframe src=”/index.html” frameborder=”0″ scrolling=”no” width=”100%” height=”100%”>
 </div>
-<script>
-var hash = window.location.hash;
-if (hash == "#1.0"){
-window.location.href = "https://kostysystem.github.io";
-} 
-</script>
 </body>
 </html>
