--- a/forapp.html
+++ b/forapp.html
@@ -3,9 +3,11 @@
 <body>
 <head>
 <meta charset="utf-8" />
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <div id="page">
-<iframe src=”/index.html” frameborder=”0″ scrolling=”no” width=”100%” height=”100%”>
+<iframe src=”/” frameborder=”0″ scrolling=”no” width=”100%” height=”100%”>
+
 </div>
 </body>
 </html>
