--- a/forapp.html
+++ b/forapp.html
@@ -4,9 +4,37 @@
 <head>
 <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+html 
+{
+ overflow: auto;
+}
+ 
+html, body, div, iframe 
+{
+ margin: 0px; 
+ padding: 0px; 
+ height: 100%; 
+ border: none;
+}
+iframe 
+{
+ display: block; 
+ width: 100%; 
+ border: none; 
+ overflow-y: auto; 
+ overflow-x: hidden;
+}
+</style>
 </head>
 <div id="page">
-<iframe src=”/” frameborder=”0″ scrolling=”no” width=”100%” height=”100%”>
+<iframe src="/"
+    frameborder="0" 
+    marginheight="0" 
+    marginwidth="0" 
+    width="100%" 
+    height="100%" 
+    scrolling="auto"></iframe >
 
 </div>
 </body>
