--- a/index.html
+++ b/index.html
@@ -80,6 +80,17 @@
 <hr>
 <br>
 <h4>Для новичков</h4>
+<p>11.11.2024, 21:00</p>
+<h2><a href="/newbie/16.html">Как сделать поиск яндекса в Firefox по умолчанию</a></h2>
+<br>
+<hr>
+<br>
+<br>
+<br>
+<br>
+<hr>
+<br>
+<h4>Для новичков</h4>
 <p>29.10.2024, 21:00</p>
 <h2><a href="/newbie/15.html">Как установить Thunderbird</a></h2>
 <br>
@@ -93,17 +104,6 @@
 <h4>KostySystem - статьи</h4>
 <p>24.10.2024, 21:42</p>
 <h2><a href="/articles/14.html">Можно ли выжить на Windows 7 в 2024 году?</a></h2>
-<br>
-<hr>
-<br>
-<br>
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem - статьи</h4>
-<p>17.10.2024, 23:48</p>
-<h2><a href="/articles/13.html">Можно ли выжить на Windows XP в 2024 году?</a></h2>
 <br>
 <hr>
 <br>
