--- a/searchframe.html
+++ b/searchframe.html
@@ -326,6 +326,19 @@ parent.sexit();
 <hr>
 <br>
 <h4>Для новичков</h4>
+<p>11.11.2024, 21:00</p>
+<div class="card2"><h2><a href="/newbie/16.html" target="_parent">Как сделать поиск яндекса в Firefox по умолчанию</a></h2></div>
+<br>
+<hr>
+<br>
+<br>
+        </div>
+        <div class="card">
+<br>
+<br>
+<hr>
+<br>
+<h4>Для новичков</h4>
 <p>29.10.2024, 21:00</p>
 <div class="card2"><h2><a href="/newbie/15.html" target="_parent">Как установить Thunderbird</a></h2></div>
 <br>
