--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 <br><br>
 <h2>Последние публикации</h2>
 <p>Боитесь упустить важный контент? Ознакомьтесь с нашим расписанием <a href="/schedule.html">тут</a>!</p>
+<div id="last-pub" class="last-pub">
 <br><br>
 <br>
 <br>
@@ -111,6 +112,7 @@
 
 
 <br><br>
+</div>
 <div class="last-razdelitel">
 
 </div>
