--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 
 </div>
 <br><br>
+<p id="lastpubcont" style="text-altgn: right;"><a href="#lastpub-cont" onclick="reloadnewpub()">[Обновить публикации]</a></p>
 <h2>Последние публикации</h2>
 <p>Боитесь упустить важный контент? Ознакомьтесь с нашим расписанием <a href="/schedule.html">тут</a>!</p>
 <div id="last-pub" class="last-pub">
@@ -140,5 +141,15 @@
 </div>
 <script src="elements.js"></script>
 <script src="/block.js" type="text/javascript"></script>
+<script>
+function reloadnewpub() {
+$( ".last-pub" ).load(window.location.href + " .last-pub" );
+document.getElementById("lastpubcont").innerHTML = "<a style=\"color: #228b22;\">Публикации обновлены!</a>";
+setTimeout(reloadnewpubobr, 2500);
+}
+function reloadnewpubobr() {
+document.getElementById("lastpubcont").innerHTML = "<a href=\"#lastpub-cont\" onclick=\"reloadnewpub()\">[Обновить публикации]</a>";
+}
+</script>
 </body>
 </html>
