--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
 
 </div>
 <br><br>
+<p id="lastpubupd"></p>
 <h2>Последние публикации</h2>
 <p>Боитесь упустить важный контент? Ознакомьтесь с нашим расписанием <a href="/schedule.html">тут</a>!</p>
-<p id="lastpubupd"><a href="#lastpubupd" onclick="reloadnewpub()">Обновить публикации</a></p>
+<a href="#lastpubupd" onclick="reloadnewpub()">Обновить публикации</a>
 <div id="last-pub" class="last-pub">
 <br><br>
 <br>
