--- a/newbie/index.html
+++ b/newbie/index.html
@@ -49,7 +49,8 @@
 <br>
 <h1>KostySystem</h1>
 <h3>Инструкции для новичков</h3>
-
+<div id="404"></div>
+<div id="p2" style="display: none;">
 <br>
 <br>
 <hr>
@@ -60,6 +61,8 @@
 <hr>
 <br>
 <br>
+</div>
+<div id="p1" style="display: none;">
 <br>
 <br>
 <hr>
@@ -210,6 +213,13 @@
 <hr>
 <br>
 <br>
+</div>
+<br>
+<br>
+<h2>Страницы</h2>
+<p id="yourpage"></p>
+<h3><a href="#page-1">1</a> | <a href="#page-2">2</a></h3>
+
 <br><br><br><br><br>
 </center>
 <div class="copyright" id="copyright">
@@ -217,6 +227,38 @@
 <p>! JavaScript отключён. Некоторые элементы сайта могут отображаться неправильно.</p>
 </center>
 </div>
+<script>
+function updatepages() {
+if (window.location.hash){
+
+
+ if (window.location.hash == "#page-1"){
+ var thispage = document.getElementById('p2');
+ thispage.style.display = 'block';
+document.getElementById("yourpage").innerHTML = "Вы на 1 странице.";
+ }
+ 
+ 
+  if (window.location.hash == "#page-2"){
+ var thispage = document.getElementById('p1');
+ thispage.style.display = 'block';
+ document.getElementById("yourpage").innerHTML = "Вы на 2 странице.";
+ } 
+ 
+ 
+} else {
+ var thispage = document.getElementById('p2');
+ thispage.style.display = 'block';
+}
+}
+window.addEventListener('hashchange', () => {
+window.scrollTo(0, 0);
+window.location.reload();
+});
+</script>
+<script>
+updatepages();
+</script>
 <script src="/elements.js"></script>
 <script src="/block.js" type="text/javascript"></script>
 </body>
