--- a/newbie/index.html
+++ b/newbie/index.html
@@ -249,6 +249,7 @@ document.getElementById("yourpage").innerHTML = "Вы на 1 странице.";
 } else {
  var thispage = document.getElementById('p2');
  thispage.style.display = 'block';
+ document.getElementById("yourpage").innerHTML = "Вы на 1 странице.";
 }
 }
 window.addEventListener('hashchange', () => {
