--- a/offline/offline-landing.html
+++ b/offline/offline-landing.html
@@ -4,6 +4,13 @@
 <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ошибка - KostySystem</title>
+ <script>
+let currentDate = new Date();
+var year = currentDate.getFullYear();
+if (year < 2020){
+alert("На вашем устройстве выставлена неправильная дата. Чтобы зайти на сайт KostySystem, выставите верную дату!")
+}
+ </script>
 <body>
 <h2>Ой!</h2>
 <h3>Не удалось загрузить веб-сайт KostySystem!</h3>
