--- a/forapp.html
+++ b/forapp.html
@@ -4,7 +4,10 @@
 <head>
 <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
+<script>
+window.location.pathname = "/";
+</script>
+ <style>
 html 
 {
  overflow: auto;
