--- a/forapp.html
+++ b/forapp.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script>
-window.location.pathname = "/";
+window.location.href = "http://kostysystem.github.io";
 </script>
  <style>
 html 
