--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <br><br>
 <img src="favicon.ico" width="70" height="70" align="center"> 
 <h2>KostySystem</h2>
-<p>"KostySystem" - это сайт, на котором вы выкладываем: наш блог, гайды для новичков в ПК-тематике, а так-же просто статьи, связанные с IT. Наш сайт открылся совсем недавно, а именно 3 августа 2024 г. поэтому тут пока-что достаточно мало материала, но с каждым днём его количество увеличивается! Изначально наш сайт предназначался только для новичков в ПК-тематике, но в итоге стал сайтом для всех, кому интересна ПК-тематика.</p>
+<p>"KostySystem" - это сайт, на котором вы выкладываем: наш блог, гайды для новичков в ПК-тематике, а так-же просто статьи, связанные с IT. Наш сайт открылся недавно, а именно 7 июля 2024 г. поэтому тут пока-что достаточно мало материала, но с каждым днём его количество увеличивается! Изначально наш сайт предназначался только для новичков в ПК-тематике, но в итоге стал сайтом для всех, кому интересна ПК-тематика.</p>
 <h4>Наша цель: познакомить людей с ПК-тематикой, если у них возникли проблемы при работе с ПК, помочь, а так-же просто поделиться нашем опытом в блоге.</h4>
 <br>
 <p>Спасибо что прочитали. Удачи!</p>
