--- a/schedule.html
+++ b/schedule.html
@@ -51,13 +51,9 @@
 <h3>Расписание выхода нового контента.</h3>
 <hr>
 <br>
-<p>С 1 сентября 2024 мы следуем нашему новому расписанию выхода нового контента. Мы выкладываем новый контент один раз в день.</p>
+<p>В данный момент KostySystem не следует обязательному расписанию.</p>
 <br>
-<h3>Расписание</h3>
-<p>Понедельник: Статья в разделе <a href="/newbie/">Для новичков</a><br>Вторник: Статья в разделе <a href="/newbie/">Для новичков</a><br>Среда: Статья в разделе <a href="/articles/">KostySystem - статьи</a><br>Четверг: Статья в разделе <a href="/articles/">KostySystem - статьи</a><br>Пятница: Статья в разделе <a href="/blog/">KostySystem Блог</a><br>Суббота: Статья в разделе <a href="/newbie/">Для новичков</a><br>Воскресенье: Статья в разделе <a href="/articles/">KostySystem - статьи</a></p>
-<br>
-<p>Внимание! Выпускать статью в разделе <a href="/blog/">KostySystem Блог</a> мы можем в любой день и в любое время, но обязательная статья в <a href="/blog/">KostySystem Блог</a> выходит каждую Пятницу.</p>
-<h3><a href="index.html">Вернуться на главную сайта</a></h3>
+<h3><a href="/">Вернуться на главную сайта</a></h3>
 <br><br><br><br>
 </center>
 <div class="copyright" id="copyright">
